--- a/index.html
+++ b/index.html
@@ -54,28 +54,38 @@
             </section>
 </div>
 
+
+
 <div class="container-fluid" id="main-container">
         <section>
+     <div class="row justify-content-left">
+      <div class="col-lg-4 col-md-12">
                  <!--<img src="https://placehold.it/200x200" alt="Your Name">-->
    <img style="height: 200px; width: 200px; transform:rotate(180deg);" src="C:\Users\santiago\Desktop\BootCamp\Basic-Portfolio\assets\images\IMG_0120.jpg" alt="Your Name">
-   
+   </div>
+   <div class="col-lg-8 col-md-12">
            
-       <div>Senior analytical professional with extensive experience in reporting and data mining using 
-               relational databases; testing and optimization applied on sanctions watchlist monitoring, AML, 
-               accounts payables, and allowance/provision for credit losses within the banking industry. 
-               Solid proficiency in Microsoft Office Suite: Access, Excel, Word, Power Point, Visio, Outlook, 
-               SharePoint, and experience with Oracle SQL Developer/SQL management studio. 
-           
-   
-   </div>
-   
-   <div id="flexbox">
-   Demonstrated experience with OFAC and Watchlist systems, and Sanctions Screening Systems (Fircosoft, SWIFT). Skilled team 
-   player and collaborator with all levels within an organization to achieve objectives. 
-    Strong quantitative, analytical, team-building, leadership abilities and an eye for detail.
-   </div>
-   </section>
-   </div>
+        <div>Senior analytical professional with extensive experience in reporting and data mining using 
+                relational databases; testing and optimization applied on sanctions watchlist monitoring, AML, 
+                accounts payables, and allowance/provision for credit losses within the banking industry. 
+                Solid proficiency in Microsoft Office Suite: Access, Excel, Word, Power Point, Visio, Outlook, 
+                SharePoint, and experience with Oracle SQL Developer/SQL management studio. 
+        </div>
+    </div>
+</div>
+
+<div class="row justify-content-center">
+
+   <div class="col-lg-12 col-md-12">
+        <div id="flexbox">
+        Demonstrated experience with OFAC and Watchlist systems, and Sanctions Screening Systems (Fircosoft, SWIFT). Skilled team 
+        player and collaborator with all levels within an organization to achieve objectives. 
+            Strong quantitative, analytical, team-building, leadership abilities and an eye for detail.
+        </div>
+    </div>
+</div>
+</section>
+</div>
    
 
 <footer class="sticky-footer">
